eventListner added for calculator

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -19,7 +19,68 @@
   </head>
   <body>
     <div id="container">
-      <div id="calculator"></div>
+      <div id="calculator">
+        <div id="result">
+          <div id="history">
+            <p id="history-value"></p>
+          </div>
+          <div id="output">
+            <p id="output-value"></p>
+          </div>
+        </div>
+        <div id="keyboard">
+          <button class="operator" id="clear">C</button>
+          <button class="operator" id="backspace">CE</button>
+          <button class="operator" id="%">%</button>
+          <button
+            class="operator"
+            id="/"
+            style="background-color: rgb(3, 88, 17)"
+          >
+            &#247;
+          </button>
+          <button class="number" id="7">7</button>
+          <button class="number" id="8">8</button>
+          <button class="number" id="9">9</button>
+          <button
+            class="operator"
+            id="*"
+            style="background-color: rgb(3, 21, 88)"
+          >
+            *
+          </button>
+          <button class="number" id="4">4</button>
+          <button class="number" id="5">5</button>
+          <button class="number" id="6">6</button>
+          <button
+            class="operator"
+            id="-"
+            style="background-color: rgb(88, 4, 3)"
+          >
+            -
+          </button>
+          <button class="number" id="1">1</button>
+          <button class="number" id="2">2</button>
+          <button class="number" id="3">3</button>
+          <button
+            class="operator"
+            id="+"
+            style="background-color: rgb(88, 55, 3)"
+          >
+            +
+          </button>
+          <button class="empty" id="empty"></button>
+          <button class="number" id="0">0</button>
+          <button class="empty" id="empty"></button>
+          <button
+            class="operator"
+            id="="
+            style="background-color: rgb(3, 54, 53)"
+          >
+            =
+          </button>
+        </div>
+      </div>
     </div>
     <script src="script.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script> -->
